cabal-version:      3.8
name:               s
version:            0.1.0.0

synopsis:           parser combinators
description:        The parser-S is a generalized parser combinator easy-to-read.
                    It is designed to focused on usability, scalability and non-verbosity.
                    .
category:           Parsing
author:             Francis Lim
maintainer:         thyeem@gmail.com
license:            MIT
license-file:       LICENSE
build-type:         Simple

extra-source-files: README.md

common shared
    build-depends:
        base               >= 4.14.3 && < 4.15
      , bytestring         >= 0.10.12 && < 0.11
      , deepseq            >= 1.4.4 && < 1.5
      , containers         >= 0.6.5 && < 0.7
      , parallel           >= 3.2.2 && < 3.3
      , pretty-simple      >= 4.1.1 && < 4.2
      , text               >= 1.2.4 && < 1.3
      , random             >= 1.2.1 && < 1.3
      , raw-strings-qq     >= 1.1 && < 1.2
      , vector             >= 0.13.0 && < 0.14
    default-language: Haskell2010

library
    import: shared
    hs-source-dirs:
        src
    exposed-modules:
        Text.S
        Text.S.Base
        Text.S.Combinator
        Text.S.Expr
        Text.S.Internal
        Text.S.Language
        Text.S.Lexeme
        Text.S.Example.CSV
        Text.S.Example.Calc
        Text.S.Example.JSON
        Text.S.Example.Markdown
        Text.S.Example.Sexp
    other-modules:


executable s
    import: shared
    hs-source-dirs:
        app
    main-is:
        Main.hs
    build-depends:
        s


test-suite doctests
    import: shared
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    main-is:
        doctests.hs
    ghc-options:
        -threaded
    build-depends:
        base, doctest >= 0.8

benchmark bench
    import: shared
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        bench
    main-is:
        Benchmarks.hs
    build-depends:
        criterion
        , split
        , attoparsec
        , megaparsec
        , flatparse
        , parsec
        , s
