cabal-version:      3.6
name:               s
version:            0.1.0.0

synopsis:           parser combinators
description:        The parser-S is a generalized parser combinator easy-to-read.
                    It is designed to focused on usability, scalability and non-verbosity.
                    .
category:           Parsing
author:             Francis Lim
maintainer:         thyeem@gmail.com
license:            MIT
license-file:       LICENSE
build-type:         Simple

extra-source-files: README.md

library
    hs-source-dirs:
        src
    build-depends:
        base               >= 4.14.3 && < 4.15
      , bytestring         >= 0.10.12 && < 0.11
      , containers         >= 0.6.5 && < 0.7
      , deepseq            >= 1.4.4 && < 1.5
      , directory
      , filepath
      , haskeline          >= 0.8.2 && < 0.9
      , parallel           >= 3.2.2 && < 3.3
      , pretty-simple      >= 4.1.1 && < 4.2
      , random             >= 1.2.1 && < 1.3
      , raw-strings-qq     >= 1.1 && < 1.2
      , text               >= 1.2.4 && < 1.3
      , vector             >= 0.13.0 && < 0.14
    exposed-modules:
        Text.S
        Text.S.Base
        Text.S.Combinator
        Text.S.Expr
        Text.S.Internal
        Text.S.Language
        Text.S.Lexeme
        Text.S.Example.CSV
        Text.S.Example.Calc
        Text.S.Example.JSON
        Text.S.Example.Lisp
        Text.S.Example.Markdown
    default-language: Haskell2010

executable s
    hs-source-dirs:
        app
    main-is:
        Main.hs
    build-depends:
        base               >= 4.14.3 && < 4.15
      , s

test-suite test
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    main-is:
        Spec.hs
    build-tool-depends:
        hspec-discover:hspec-discover >=2.0 && <3.0
    ghc-options:
        -threaded
    build-depends:
        base               >= 4.14.3 && < 4.15
      , hspec              >= 2.0 && < 3.0
      , hspec-discover
      , QuickCheck
      , s
    other-modules:
        LispSpec
    default-language: Haskell2010

test-suite doctest
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    main-is:
        doctests.hs
    ghc-options:
        -threaded
    build-depends:
      , doctest
    default-language: Haskell2010

benchmark bench
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        bench
    main-is:
        Benchmarks.hs
    build-depends:
        base               >= 4.14.3 && < 4.15
        , s
        , criterion
        , split
        , attoparsec
        , megaparsec
        , flatparse
        , parsec
    default-language: Haskell2010
