cabal-version:      3.6
name:               s
version:            0.1.0.0

synopsis:           parser combinators
description:        The parser-S is a generalized parser combinator easy-to-read.
                    It is designed to focused on usability, scalability and non-verbosity.
                    .
category:           Parsing
author:             Francis Lim
maintainer:         thyeem@gmail.com
license:            MIT
license-file:       LICENSE
build-type:         Simple

extra-source-files: README.md

library
    hs-source-dirs:
        src
    build-depends:
        base
      , bytestring
      , containers
      , deepseq
      , directory
      , filepath
      , haskeline
      , parallel
      , pretty-simple
      , random
      , raw-strings-qq
      , text
      , vector
    exposed-modules:
        Text.S
        Text.S.Base
        Text.S.Combinator
        Text.S.Expr
        Text.S.Internal
        Text.S.Language
        Text.S.Lexeme
        Text.S.Example.CSV
        Text.S.Example.Calc
        Text.S.Example.JSON
        Text.S.Example.Lisp
        Text.S.Example.Markdown
    default-language: Haskell2010

executable s
    hs-source-dirs:
        app
    main-is:
        Main.hs
    build-depends:
        base
      , s

test-suite test
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    main-is:
        Spec.hs
    build-tool-depends:
        hspec-discover:hspec-discover >=2.0 && <3.0
    ghc-options:
        -threaded
    build-depends:
        base
      , hspec
      , hspec-discover
      , QuickCheck
      , s
    other-modules:
        LispSpec
    default-language: Haskell2010

test-suite doctest
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    main-is:
        doctests.hs
    ghc-options:
        -threaded
    build-depends:
        base
      , doctest
    default-language: Haskell2010

benchmark bench
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        bench
    main-is:
        Benchmarks.hs
    build-depends:
        base
        , s
        , criterion
        , split
        , attoparsec
        , megaparsec
        , flatparse
        , parsec
    default-language: Haskell2010
